# gdsutil

./: .gitignore  Cargo.toml
.cargo/: config.toml
resources/: layer_map.xml
resources/FA_route/: FA_route.def  FA_route.def.gds  FA_route.def.gds.gds  FA_route.def.gds.txt  FA_route.def.klay.gds  FA_route_generated.gds  FA_route_generated.gds.txt  FA_route_generated.oas  FA_route_generated.oasis  design  lef_7_metals.lef  simple.chip.txt  simple.def  simple.def.klay.gds  simple_generated.gds  simple_generated.gds.txt  simple_generated.oas
src/: main.rs
src/commands/: def_to_gds.rs  def_to_oasis.rs  gds_stream_writer.rs  gds_to_def.rs  mod.rs  positions_to_file.rs  replace_all.rs  snap.py  snap_to_grid.rs
src/tests/: mod.rs
