[package]
name = "gdsutils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.3.19", features = ["cargo"]}
csv = "1.2.2"
gds21 = "3.0.0-pre.2"
ini = "1.3.0"
iron-shapes = {  version = "0.2.0" }
libreda-db = { version = "0.0.11" }
libreda-lefdef = { version = "0.0.3" }
libreda-oasis = "0.0.4"
num-traits = "0.2.19"
polonius-the-crab = "0.3.1"
procon = "0.2.6"
regex = "1.9.1"
serde = "1.0.178"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
structopt = "0.3.26"
toml = "0.7.6"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
tap = "1.0.1"
databake = "0.1.7"

[dev-dependencies]
faux = "^0.1"
chronobreak = "0.1.0"
mock_instant = "0.4.0"
mockall = "0.12.1"
chrono = "0.4.38"
pretty_assertions_sorted = "1.2.3"
yaml-rust = { version = "0.8.0", package = "yaml-rust2" }
#yaml = "0.3.0"
#guerrilla = "0.1.4"

[registries]
flux-cargo-registry = { index = "file:///tmp/flux-cargo-registry" }
######## TODO : https://book.ktra.dev/about_ktra/overview

[patch.crates-io]
# iron-shapes = { version = "0.2", registry = "flux-cargo-registry" }
# iron-shapes-booleanop = { version = "0.2", registry = "flux-cargo-registry" }
# iron-shapes-db = { version = "0.0.11", registry = "flux-cargo-registry" }
interp = { registry = "flux-cargo-registry"}
iron-shapes = { registry = "flux-cargo-registry"}
iron-shapes-booleanop = { registry = "flux-cargo-registry"}
iron-shapes-algorithms = { registry = "flux-cargo-registry"}
libreda-logic = { registry = "flux-cargo-registry"}
libreda-db = { registry = "flux-cargo-registry"}
libreda-pnr = { registry = "flux-cargo-registry"}
libreda-oasis = { registry = "flux-cargo-registry"}
libreda-lefdef = { registry = "flux-cargo-registry"}
libreda-structural-verilog = { registry = "flux-cargo-registry"}
liberty-io = { registry = "flux-cargo-registry"}
# arboreus-cts = { registry = "flux-cargo-registry"}
# tetris-legalizer = { registry = "flux-cargo-registry"}
# mycelium-router = { registry = "flux-cargo-registry"}
# libreda-triton-route = { registry = "flux-cargo-registry"}
libreda-sta = { registry = "flux-cargo-registry"}
libreda-drc = { registry = "flux-cargo-registry"}
libreda-python = { registry = "flux-cargo-registry"}
libreda-stream-parser = { registry = "flux-cargo-registry"}
# byteorder = { version = "1.4.3", registry = "crates-io" }
